@@ -306,6 +306,8 @@ Pierre Le Magourou <pierre.lemagourou@openwide.fr>
 Hugo Camboulive <hugo.camboulive@zodiacaerospace.com>
 Sohyun Kim <anna1014.kim@samsung.com>
 Leandro Dorileo <dorileo@profusion.mobi>
+Michael Bouchaud (yoz) <yoz@efl.so>
+Aymeric Dumaz <aymeric.dumaz@gmail.com>
 
 Ethumb
 ------
